--- a/Quan_Ly/Quan_Ly/Form1.resx
+++ b/Quan_Ly/Quan_Ly/Form1.resx
@@ -117,16 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="imageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="imageIconList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <data name="imageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="imageIconList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABC
-        DQAAAk1TRnQBSQFMAgEBBQEAASABAAEgAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD2
+        EAAAAk1TRnQBSQFMAgEBCQEAAUgBAAFIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAATADAAEBAQABCAYAAQwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
         AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
@@ -153,42 +153,58 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEAAf8O9AH/MAAB8AES
-        AUMFFQFDARMCbQEVAUMBEgHwMAAB/wH3BwAB9wH/AfMBEQEAAfcB/zEAAe8CAAERAUMBEQIAAe8BAAH0
-        AUMBAAHvMgAB7wEAAREB8wH/AfMBEQEAAe8BAAH0AUMBAAHvMgAB7wEAAUMB/wEAAf8BQwEAAe8BAAH/
-        AUMBAAHvMgAB7wEAAQ4BkgHvAZIBDgEAAeoB7wGSAQ4BAAHvMgAB8gEHAe8B6wHvAQcC7AEHAe8B6wHv
-        AQcB8zEAAf8B8QHvAfAB8wEHAe8C8gHvAQcB8wHwAe8B8QH/MAAB8AEPAgABEQIAAg8CAAERAgABDwHw
-        MAABBw4AAQcwAAH0AUMMAAFDAfQwAAH/AZIMAAGSAf8xAAHzAQ8KAAEPAfMyAAH/AQcBEwJDBBUCQwET
-        AQcB/zQAAf8I9AH/RQAB/wP0Af8CAAH/A/QB/xMAAfMB9wEHAf8BBwH3AvQB9wEHAf8BBwH3AfMSAAH/
-        AewDQwG8AgABvANDAewB/xIAAQcBAAEVAfMBFQEAAgcBAAEVAfMBFQEAAQcCAAHzCu8BvAH/AwAB9AFD
-        AwAB7wIAAe8DAAFDAfQGAAH0AQcH7wEHAfQBAAHvAQABFQHzARUBAAIHAQABFQHzARUBAAHvAgAB8wrv
-        AbwB/wMAAfQBQwMAAe8CAAHvAwABQwH0AQAB9AEHAu8BBwHvCQAB7wEAAe8BAAEVAfMBFQEAAgcBAAEV
-        AfMBFQEAAe8EAAH/AfEFBwH0BgAB9AFDAwAB7wIAAe8DAAFDAfQBAAHvAwABDgH3AREHAAEQAfIBAAHv
-        AQABFQHzARUBAAIHAQABFQHzARUBAAHvAwAB/wHtBgABQwHyBQAB9AFDAwAB9wL/AfcDAAFDAfQBAAHz
-        ARQDAAESAZIBDwUAAQ8BBwH/AQABBwEAARUB8wEVAQACBwEAARUB8wEVAQAB7wMAAfEIAAFtAf8EAAH/
-        AUMDAAEPAkMBDwMAAUMB/wIAAfIBbQMOAZIB8QHsARMBFQETAewB8gH/AgAB9AHvAfAB9AFDAQACBwEA
-        ARUB8wEVAQAB7wMAAe8IAAFDAfQDAAHzAfEB7AoAAewB8QHzAgAB/wHyAQcB8QH/AQAB/wH0AfMB9AH/
-        BwAB9AFDAQACBwEAARUB8wEVAQAB7wMAAe8IAAFDAfQDAAHxAeoBBwHsCAAB7AEHAeoB8QIAAf8B7AER
-        AW0B9AEAAfQB7AEVAewB9AcAAfQBQwEAAgcBAAEVAfMBFQEAAe8DAAHvCAABEQHzAf8DAAHyAeoBBwHt
-        BgAB7QEHAeoB8gMAAbwDAAH3Af8B7AMAAewB/wYAAfQBQwEAAe8B9AHvAfAB9AFDAQAB7wMAAe8IAAEO
-        ARIB7AH/AwAB8gHqAQcBkgQAAZIBBwEVAfEEAAHvAwAB7AH0AUMDAAFDAfQGAAH0AUMBAAHvAwAB9AFD
-        AQAB7wMAAe8IAAERAfMB7AEHBAAB8wHqAQcB9wIAAfcBBwEOAUMB9AQAAfIBEAEAAQ4BvAH/AUMDAAEV
-        AfQGAAH0AUMBAAHvAwAB9AFDAQAB7wMAAe8IAAERAfMB9wHvBQAB8wFtBO8BDwEAAUMB9AQAAf8B8gEH
-        AfEC/wHvAQ4BAAEOAe8B/wYAAfQBQwEAAe8DAAH/AesBQwHwAwABvAhDARUB6gESAfEGAAHzAW0C7wFt
-        AewBAAFDAfQKAAH/AfEBBwHxAf8HAAH0AUMBAAHvBAAB/wH0Af8DAAH/CvQC/wcAAfQC6wH0AfMB7wG8
-        Af8WAAH0ARUBAAEHHwAC/xsAAf8BBwH3AfMIAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYA
-        AQEWAAP/GQABgAEhBgABgAEhBgABhAEhBgABgAEBBgABgAEBLgABgAEBBgABgAEBBgAB4AEHBgAC/wHB
-        AYMC/wGAAQEC/wKBAv8BgAEBAYABAwKBAfgBAAGAAQEBgAEDAoECAAGAAQEB4AEfAoECAAGAAQEBwAEP
-        AYABAQIAAYABAQHAAQcBgAEBAYABAQGAAQEBwAEHAgABwQEHAfABAQHAAQcCAAHBAQcB8AEBAcABAwGA
-        AQEBwAEDAfABAQHAAQEBwAEDAcABAwHwAeEBwAEBAeABAwHAAQMB8AHhAcABAQHwAQMBwAEDAfAB4QHA
-        AQEB+AEDAf8BBwHwAfEBwAEBAfwBAwL/AfAD/wH+AX8C/wHwAf8L
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/0YAAf8B8QIHAfEB/zgA
+        Af8BBwEPBAABDwEHAf81AAH/AewIAAHsAf80AAEHCgABBzMAAf8BDwQAAvcEAAEPAf8yAAHxBQAC7wUA
+        AfEyAAEHAwAB9wHvAvIB7wH3AwABBzIAAQcDAAH3Ae8C8gHvAfcDAAEHMgAB8QUAAu8FAAHxMgAB/wEP
+        BAAC9wQAAQ8B/zMAAQcKAAEHNAAB/wHsCAAB7AH/NQAB/wEHAQ8EAAEPAQcB/zgAAf8B8QIHAfEB/3UA
+        Af8O9AH/BgAC/wH0Av8YAAr0Af8CAAHwARIBQwUVAUMBEwJtARUBQwESAfAEAAH/AfEB7AETARUBEwHs
+        AfEB/wkAARIDAAH3BgAB/w4AAf8B9wcAAfcB/wHzAREBAAH3Af8DAAH/AZIBDgUAAQ4B9wH/BgABbQcA
+        AfMEAAEVBQAB/wEAAfQFAAH/AQAB7wIAAREBQwERAgAB7wEAAfQBQwEAAe8DAAH/AfcJAAH3Af8EAAEV
+        CQAB8wMAAUMFAAFtAQAC9AQAAfQBAAHvAQABEQHzAf8B8wERAQAB7wEAAfQBQwEAAe8CAAH/AfQB8AHr
+        AQ4HAAEOAfEDAAH/BAABBwH/AesHAAFDDQAB9AEAAe8BAAFDAf8BAAH/AUMBAAHvAQAB/wFDAQAB7wIA
+        Ae8BFQHvAfIB8QHsARAGAAHsAf8HAAFtAQAB8QH/AwAB9wIAAUMHAAFtAf8EAAH0AQAB7wEAAQ4BkgHv
+        AZIBDgEAAeoB7wGSAQ4BAAHvAQAB/wFtAgABEAHtAvIBkgEOBAABEwH/BQAB7AGSAwAB/wYAAUMEAAEP
+        CAAB9AEAAfIBBwHvAesB7wEHAuwBBwHvAesB7wEHAfMBAAH0ARUEAAEOAesB8wHtBAABFQH0BQAB8QEO
+        AwAB7wYAAUMNAAH0Af8B8QHvAfAB8wEHAe8C8gHvAQcB8wHwAe8B8QH/AfQBFQYAAgcEAAETAf8FAAEO
+        Af8KAAFDDQAB9AHwAQ8CAAERAgACDwIAARECAAEPAfAB/wFtBgACBwQAAewB/wYAAbwBAAH/BQABEgIA
+        AUMNAAH0AQcOAAEHAQAB7wYAAgcDAAEOAfEDAAHwBQAB/wGSBwABQw0AAvQBQwwAAUMB9AEAAfQBQwUA
+        AgcDAAH3Af8JAAEVBAABbQMAAUMOAAH/AZIMAAGSAf8CAAG8AQ4EAAEHAe8BAAEOAfcB/w4AARUEAAFD
+        DAAB/wIAAfMBDwoAAQ8B8wMAAf8BvAFDAwAB7wHwAewB8QH/CAAB8AUAAf8FAAHyCwAB/wMAAf8BBwET
+        AkMEFQJDARMBBwH/BQAB9AHvAW0BFQG8Av8XAAHyCUMB/wYAAf8I9AH/CQAB/wH0Af85AAH/A/QB/wIA
+        Af8D9AH/EwAB8wH3AQcB/wEHAfcC9AH3AQcB/wEHAfcB8xIAAf8B7ANDAbwCAAG8A0MB7AH/EgABBwEA
+        ARUB8wEVAQACBwEAARUB8wEVAQABBwIAAfMK7wG8Af8DAAH0AUMDAAHvAgAB7wMAAUMB9AYAAfQBBwfv
+        AQcB9AEAAe8BAAEVAfMBFQEAAgcBAAEVAfMBFQEAAe8CAAHzCu8BvAH/AwAB9AFDAwAB7wIAAe8DAAFD
+        AfQBAAH0AQcC7wEHAe8JAAHvAQAB7wEAARUB8wEVAQACBwEAARUB8wEVAQAB7wQAAf8B8QUHAfQGAAH0
+        AUMDAAHvAgAB7wMAAUMB9AEAAe8DAAEOAfcBEQcAARAB8gEAAe8BAAEVAfMBFQEAAgcBAAEVAfMBFQEA
+        Ae8DAAH/Ae0GAAFDAfIFAAH0AUMDAAH3Av8B9wMAAUMB9AEAAfMBFAMAARIBkgEPBQABDwEHAf8BAAEH
+        AQABFQHzARUBAAIHAQABFQHzARUBAAHvAwAB8QgAAW0B/wQAAf8BQwMAAQ8CQwEPAwABQwH/AgAB8gFt
+        Aw4BkgHxAewBEwEVARMB7AHyAf8CAAH0Ae8B8AH0AUMBAAIHAQABFQHzARUBAAHvAwAB7wgAAUMB9AMA
+        AfMB8QHsCgAB7AHxAfMCAAH/AfIBBwHxAf8BAAH/AfQB8wH0Af8HAAH0AUMBAAIHAQABFQHzARUBAAHv
+        AwAB7wgAAUMB9AMAAfEB6gEHAewIAAHsAQcB6gHxAgAB/wHsAREBbQH0AQAB9AHsARUB7AH0BwAB9AFD
+        AQACBwEAARUB8wEVAQAB7wMAAe8IAAERAfMB/wMAAfIB6gEHAe0GAAHtAQcB6gHyAwABvAMAAfcB/wHs
+        AwAB7AH/BgAB9AFDAQAB7wH0Ae8B8AH0AUMBAAHvAwAB7wgAAQ4BEgHsAf8DAAHyAeoBBwGSBAABkgEH
+        ARUB8QQAAe8DAAHsAfQBQwMAAUMB9AYAAfQBQwEAAe8DAAH0AUMBAAHvAwAB7wgAAREB8wHsAQcEAAHz
+        AeoBBwH3AgAB9wEHAQ4BQwH0BAAB8gEQAQABDgG8Af8BQwMAARUB9AYAAfQBQwEAAe8DAAH0AUMBAAHv
+        AwAB7wgAAREB8wH3Ae8FAAHzAW0E7wEPAQABQwH0BAAB/wHyAQcB8QL/Ae8BDgEAAQ4B7wH/BgAB9AFD
+        AQAB7wMAAf8B6wFDAfADAAG8CEMBFQHqARIB8QYAAfMBbQLvAW0B7AEAAUMB9AoAAf8B8QEHAfEB/wcA
+        AfQBQwEAAe8EAAH/AfQB/wMAAf8K9AL/BwAB9ALrAfQB8wHvAbwB/xYAAfQBFQEAAQcfAAL/GwAB/wEH
+        AfcB8wgAAUIBTQE+BwABPgMAASgDAAFAAwABMAMAAQEBAAEBBQABgAEBFgAD/wEAAv8GAAH4AR8GAAHg
+        AQcGAAHAAQMGAAHAAQMGAAGAAQEGAAGAAQEGAAGAAQEGAAGAAQEGAAGAAQEGAAGAAQEGAAHAAQMGAAHA
+        AQMGAAHgAQcGAAH4AR8GAAL/CAAB/AEfAv8B4AEDAgAB8AEHAfwBHwGAAQECAAHgAQMB8AEHA4ABIQHA
+        AQEB4AEDAYIBAAGAASEBgAEBAcABAwGCASABhAEhAYABAAHCAQEBggEAAYABAQIAAcABAQGBAcABgAEB
+        AgABwAEBAYAFAAHAAYEBgAUAAcEBQQGAAwABgAEBAcABAwGPAcACAAGAAQEB4AEDAY8BwQIAAcABAwHw
+        AQcBgAEBAYABAQHAAQcB+AEPAYABAwGAAQEB8AEfAv8BwAEHAeABBwH8AX8G/wHBAYMC/wGAAQEC/wKB
+        Av8BgAEBAYABAwKBAfgBAAGAAQEBgAEDAoECAAGAAQEB4AEfAoECAAGAAQEBwAEPAYABAQIAAYABAQHA
+        AQcBgAEBAYABAQGAAQEBwAEHAgABwQEHAfABAQHAAQcCAAHBAQcB8AEBAcABAwGAAQEBwAEDAfABAQHA
+        AQEBwAEDAcABAwHwAeEBwAEBAeABAwHAAQMB8AHhAcABAQHwAQMBwAEDAfAB4QHAAQEB+AEDAf8BBwHw
+        AfEBwAEBAfwBAwL/AfAD/wH+AX8C/wHwAf8L
 </value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAHgAAAB4CAYAAAA5ZDbSAAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1
-        MAAA6mAAADqYAAAXcJy6UTwAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAHdElNRQfnCRISGDH88pOCAAAA
+        MAAA6mAAADqYAAAXcJy6UTwAAAAJcEhZcwAADrwAAA68AZW8ckkAAAAHdElNRQfnCRISGDH88pOCAAAA
         PHRFWHRDb21tZW50AHhyOmQ6REFGbjhyWTJqMzg6MjMsajo1ODkxMTA1OTIyNTY5Njk4NzkyLHQ6MjMw
         NzI1MDfRPJZBAAAVw0lEQVR4Xu2dB3BUVRuG7TOOjo7O6CggIAIiCEgLICW0IFV6k16kRUL/lRIghBYC
         CAgBQ0nokNCkiiBVmkhRehWl96Ig2L7/PIe7YXezGzC5d3ez7DtzJtl77ya7973nO18/j0kAfo0AwX6O
