--- a/Quan_Ly/Quan_Ly/Properties/Resources.resx
+++ b/Quan_Ly/Quan_Ly/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="refresh-circle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\img\icon\refresh-circle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icon 120x120" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\img\icon 120x120.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
