--- a/Quan_Ly/Quan_Ly/formMainAdmin.resx
+++ b/Quan_Ly/Quan_Ly/formMainAdmin.resx
@@ -125,7 +125,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD6
-        EQAAAk1TRnQBSQFMAgEBCgEAAbgBAAG4AQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        EQAAAk1TRnQBSQFMAgEBCgEAAcgBAAHIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAATADAAEBAQABCAYAAQwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -204,91 +204,7 @@
         AQMB8AHhAcABAQH4AQMB/wEHAfAB8QHAAQEB/AEDAv8B8AP/Af4BfwL/AfAB/ws=
 </value>
   </data>
-  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>127, 17</value>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>52</value>
   </metadata>
-  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
-        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD6
-        EQAAAk1TRnQBSQFMAgEBCgEAAaABAAGgAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAATADAAEBAQABCAYAAQwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
-        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
-        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
-        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
-        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
-        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
-        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
-        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
-        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
-        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
-        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
-        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
-        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
-        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
-        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
-        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
-        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
-        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
-        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
-        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
-        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
-        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
-        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
-        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
-        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
-        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
-        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/0YAAf8B8QIHAfEB/wgA
-        Af8BEwYAARMB/yYAAf8BBwEPBAABDwEHAf8GAAHwAewGAAHsAfAlAAH/AewIAAHsAf8FAAEHAfcGBwH3
-        AQclAAEHCgABBwUAA+8BBwLvAQcD7yQAAf8BDwQAAvcEAAEPAf8EAAH3AQcB9wEHAu8BBwH3AQcB9yQA
-        AfEFAALvBQAB8QQAAe0B8AHtAbwC7wG8Ae0B8AHtJAABBwMAAfcB7wLyAe8B9wMAAQcEAAHsAfEB7AHw
-        Au8B8AHsAfEB7CQAAQcDAAH3Ae8C8gHvAfcDAAEHBAABbQHyAewB8QLvAfEB7AHyAW0kAAHxBQAC7wUA
-        AfEEAAESAfMB6wHyAu8B8gHrAfMBEiQAAf8BDwQAAvcEAAEPAf8EAAFDAfQB7AHzAgcB8wHsAfQBQyUA
-        AQcKAAEHBQABDwH/BgAB/wEPJQAB/wHsCAAB7AH/BAABQwoAAUMlAAH/AQcBDwQAAQ8BBwH/CAAC7wIA
-        Au8qAAH/AfECBwHxAf8KAAHzAQ8CAAEPAfNlAAH/DvQB/wYAAv8B9AL/GAAK9AH/AgAB8AESAUMFFQFD
-        ARMCbQEVAUMBEgHwBAAB/wHxAewBEwEVARMB7AHxAf8JAAESAwAB9wYAAf8OAAH/AfcHAAH3Af8B8wER
-        AQAB9wH/AwAB/wGSAQ4FAAEOAfcB/wYAAW0HAAHzBAABFQUAAf8BAAH0BQAB/wEAAe8CAAERAUMBEQIA
-        Ae8BAAH0AUMBAAHvAwAB/wH3CQAB9wH/BAABFQkAAfMDAAFDBQABbQEAAvQEAAH0AQAB7wEAAREB8wH/
-        AfMBEQEAAe8BAAH0AUMBAAHvAgAB/wH0AfAB6wEOBwABDgHxAwAB/wQAAQcB/wHrBwABQw0AAfQBAAHv
-        AQABQwH/AQAB/wFDAQAB7wEAAf8BQwEAAe8CAAHvARUB7wHyAfEB7AEQBgAB7AH/BwABbQEAAfEB/wMA
-        AfcCAAFDBwABbQH/BAAB9AEAAe8BAAEOAZIB7wGSAQ4BAAHqAe8BkgEOAQAB7wEAAf8BbQIAARAB7QLy
-        AZIBDgQAARMB/wUAAewBkgMAAf8GAAFDBAABDwgAAfQBAAHyAQcB7wHrAe8BBwLsAQcB7wHrAe8BBwHz
-        AQAB9AEVBAABDgHrAfMB7QQAARUB9AUAAfEBDgMAAe8GAAFDDQAB9AH/AfEB7wHwAfMBBwHvAvIB7wEH
-        AfMB8AHvAfEB/wH0ARUGAAIHBAABEwH/BQABDgH/CgABQw0AAfQB8AEPAgABEQIAAg8CAAERAgABDwHw
-        Af8BbQYAAgcEAAHsAf8GAAG8AQAB/wUAARICAAFDDQAB9AEHDgABBwEAAe8GAAIHAwABDgHxAwAB8AUA
-        Af8BkgcAAUMNAAL0AUMMAAFDAfQBAAH0AUMFAAIHAwAB9wH/CQABFQQAAW0DAAFDDgAB/wGSDAABkgH/
-        AgABvAEOBAABBwHvAQABDgH3Af8OAAEVBAABQwwAAf8CAAHzAQ8KAAEPAfMDAAH/AbwBQwMAAe8B8AHs
-        AfEB/wgAAfAFAAH/BQAB8gsAAf8DAAH/AQcBEwJDBBUCQwETAQcB/wUAAfQB7wFtARUBvAL/FwAB8glD
-        Af8GAAH/CPQB/wkAAf8B9AH/OQAB/wP0Af8CAAH/A/QB/xMAAfMB9wEHAf8BBwH3AvQB9wEHAf8BBwH3
-        AfMSAAH/AewDQwG8AgABvANDAewB/xIAAQcBAAEVAfMBFQEAAgcBAAEVAfMBFQEAAQcCAAHzCu8BvAH/
-        AwAB9AFDAwAB7wIAAe8DAAFDAfQGAAH0AQcH7wEHAfQBAAHvAQABFQHzARUBAAIHAQABFQHzARUBAAHv
-        AgAB8wrvAbwB/wMAAfQBQwMAAe8CAAHvAwABQwH0AQAB9AEHAu8BBwHvCQAB7wEAAe8BAAEVAfMBFQEA
-        AgcBAAEVAfMBFQEAAe8EAAH/AfEFBwH0BgAB9AFDAwAB7wIAAe8DAAFDAfQBAAHvAwABDgH3AREHAAEQ
-        AfIBAAHvAQABFQHzARUBAAIHAQABFQHzARUBAAHvAwAB/wHtBgABQwHyBQAB9AFDAwAB9wL/AfcDAAFD
-        AfQBAAHzARQDAAESAZIBDwUAAQ8BBwH/AQABBwEAARUB8wEVAQACBwEAARUB8wEVAQAB7wMAAfEIAAFt
-        Af8EAAH/AUMDAAEPAkMBDwMAAUMB/wIAAfIBbQMOAZIB8QHsARMBFQETAewB8gH/AgAB9AHvAfAB9AFD
-        AQACBwEAARUB8wEVAQAB7wMAAe8IAAFDAfQDAAHzAfEB7AoAAewB8QHzAgAB/wHyAQcB8QH/AQAB/wH0
-        AfMB9AH/BwAB9AFDAQACBwEAARUB8wEVAQAB7wMAAe8IAAFDAfQDAAHxAeoBBwHsCAAB7AEHAeoB8QIA
-        Af8B7AERAW0B9AEAAfQB7AEVAewB9AcAAfQBQwEAAgcBAAEVAfMBFQEAAe8DAAHvCAABEQHzAf8DAAHy
-        AeoBBwHtBgAB7QEHAeoB8gMAAbwDAAH3Af8B7AMAAewB/wYAAfQBQwEAAe8B9AHvAfAB9AFDAQAB7wMA
-        Ae8IAAEOARIB7AH/AwAB8gHqAQcBkgQAAZIBBwEVAfEEAAHvAwAB7AH0AUMDAAFDAfQGAAH0AUMBAAHv
-        AwAB9AFDAQAB7wMAAe8IAAERAfMB7AEHBAAB8wHqAQcB9wIAAfcBBwEOAUMB9AQAAfIBEAEAAQ4BvAH/
-        AUMDAAEVAfQGAAH0AUMBAAHvAwAB9AFDAQAB7wMAAe8IAAERAfMB9wHvBQAB8wFtBO8BDwEAAUMB9AQA
-        Af8B8gEHAfEC/wHvAQ4BAAEOAe8B/wYAAfQBQwEAAe8DAAH/AesBQwHwAwABvAhDARUB6gESAfEGAAHz
-        AW0C7wFtAewBAAFDAfQKAAH/AfEBBwHxAf8HAAH0AUMBAAHvBAAB/wH0Af8DAAH/CvQC/wcAAfQC6wH0
-        AfMB7wG8Af8WAAH0ARUBAAEHHwAC/xsAAf8BBwH3AfMIAAFCAU0BPgcAAT4DAAEoAwABQAMAATADAAEB
-        AQABAQUAAYABARYAA/8BAAT/BAAB+AEfAeABBwQAAeABBwLnBAABwAEDAeABBwQAAcABAwHgAQcEAAGA
-        AQEB4AEHBAABgAEBAeABBwQAAYABAQHgAQcEAAGAAQEB4AEHBAABgAEBAeABBwQAAYABAQHgAQcEAAHA
-        AQMC5wQAAcABAwHAAQMEAAHgAQcB+QGfBAAB+AEfAfgBHwQABP8GAAH8AR8C/wHgAQMCAAHwAQcB/AEf
-        AYABAQIAAeABAwHwAQcDgAEhAcABAQHgAQMBggEAAYABIQGAAQEBwAEDAYIBIAGEASEBgAEAAcIBAQGC
-        AQABgAEBAgABwAEBAYEBwAGAAQECAAHAAQEBgAUAAcABgQGABQABwQFBAYADAAGAAQEBwAEDAY8BwAIA
-        AYABAQHgAQMBjwHBAgABwAEDAfABBwGAAQEBgAEBAcABBwH4AQ8BgAEDAYABAQHwAR8C/wHAAQcB4AEH
-        AfwBfwb/AcEBgwL/AYABAQL/AoEC/wGAAQEBgAEDAoEB+AEAAYABAQGAAQMCgQIAAYABAQHgAR8CgQIA
-        AYABAQHAAQ8BgAEBAgABgAEBAcABBwGAAQEBgAEBAYABAQHAAQcCAAHBAQcB8AEBAcABBwIAAcEBBwHw
-        AQEBwAEDAYABAQHAAQMB8AEBAcABAQHAAQMBwAEDAfAB4QHAAQEB4AEDAcABAwHwAeEBwAEBAfABAwHA
-        AQMB8AHhAcABAQH4AQMB/wEHAfAB8QHAAQEB/AEDAv8B8AP/Af4BfwL/AfAB/ws=
-</value>
-  </data>
 </root>
