--- a/Quan_Ly/Quan_Ly/formMain.resx
+++ b/Quan_Ly/Quan_Ly/formMain.resx
@@ -125,7 +125,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD6
-        EQAAAk1TRnQBSQFMAgEBCgEAAdABAAHQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        EQAAAk1TRnQBSQFMAgEBCgEAAfABAAHwAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAATADAAEBAQABCAYAAQwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -204,10 +204,111 @@
         AQMB8AHhAcABAQH4AQMB/wEHAfAB8QHAAQEB/AEDAv8B8AP/Af4BfwL/AfAB/ws=
 </value>
   </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAHgAAAB4CAYAAAA5ZDbSAAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1
+        MAAA6mAAADqYAAAXcJy6UTwAAAAJcEhZcwAADsEAAA7BAbiRa+0AAAAHdElNRQfnCRISGDH88pOCAAAA
+        PHRFWHRDb21tZW50AHhyOmQ6REFGbjhyWTJqMzg6MjMsajo1ODkxMTA1OTIyNTY5Njk4NzkyLHQ6MjMw
+        NzI1MDfRPJZBAAAVw0lEQVR4Xu2dB3BUVRuG7TOOjo7O6CggIAIiCEgLICW0IFV6k16kRUL/lRIghBYC
+        CAgBQ0nokNCkiiBVmkhRehWl96Ig2L7/PIe7YXezGzC5d3ez7DtzJtl77ya7973nO18/j0kAfo0AwX6O
+        AMF+jgDBfo4AwX6OAMF+jgDBfo4AwX6OAMF+jgDBfo4AwX6OAMF+jgDBfo5HguB///1Xfv/9dzl96rQc
+        OXxEDh86pMZh9fthOXnypFy+fFlu374t//zzj/EO/4FfEgxRly9dlh3ffy/xU6dKj27dpX6dulIppKJU
+        LF9eKquflSqESLnSwVIuuIxUrviBNKxXX8I+6SRDBw+R6dOmyepvvpG9e/fK+XPn5Y8//jD+cvqD3xAM
+        CQcPHJRZM2ZK967dpPaHNaRqpcrSrHETGRQxUBLnJcj2bdvk6JEj8vOJE3L8+HHZt2+fbFy/QeYnJsr4
+        L8ZJn896SavmLaR6lapSplQpKVn8falQtpx81KChhPfpIwlz58mhgwfTFeHpmuC//vpLjijCpsdP08QU
+        KxKkZmSwtGnZSoYPi5K5s+fI8mXL9Gxc++238u0axhrZtHGjnt0//fijFtOnfv1VLl68KNeuXZMbN27I
+        1atX5Vd1bOcPO2Xh/AV6Vrds1kyRXlpKFC0mzZs0lTmzZ8vZs2eNT+K7SJcEX7xwQb5avFhC23eQoIKF
+        5M03MstbWbJKkQIFpZaauc2bNpXWLVpq0j9u1TppcKxJo4+kgRLXXFe9ShWp+kElPaqoUbNadWncqJF0
+        6RQmI6NHyMIFC2TXzp1y7tw5uXnzppw5fVpWLl8hXcM6y/tBRbW4/2LMWPnl5C/GJ/M9pBuC//77b9mv
+        RGp0VJReQwvmyy8h5cprkseN/UJWrfxa9v60V83GU3o2XlezEcXq7t278ueff+rB77d+vyXXr1+XS5cu
+        yZkzZ+T4sWPy008/ydYtW2XlipUSHxcngwdGSvuP28qHVavpWYuYRtR/PnKkvg6l7NDBQxI1dKiULlFS
+        S40xn4+WU6dOGZ/Wd+DzBKPdrl+3XnqodbWaWlNbNm8uE2MmaBELSRBvBfi715SoPqjW3GVLl8qwIUPV
+        WtxASr9fQmpW/1AR+rl+oCB6ZHS0lCxWXM3oCjJvzly5deuW8Ve8D58l+M4fd9TauVratm4j9WrXkbGj
+        x8iB/Qfkzp07xhWex21FHJr1hPHjpW6t2lJKKWGdOobKmtWr1Xr9g/Tr01cvE51CQ+XkzyeNd3kXPkcw
+        Mwcx2L5tWwlRohHxi6nia0AZQ2ELC/1EE40IX7L4K1m0cKFUq1xFjcry/fbtxtXeg08RzFPfv2+4FH6v
+        gNJam8uPe/YYZ3wXaPJ7du+W8N59JLhkKWnRtJlMio3Vyhxr84b1640rvQOfIBhP05rVa7S9iUY7ZvRo
+        PUPSE/gO+/buk97KlkYxw5SC8GClhH2//XvjKs/D6wSj3WLHNqrfQD7p0FHbrOnZZcgSs23rNq075H0n
+        t2TJmEmL7GNKW/cGvEow2ibmBTZqv7595YcdO4wz6R+YYzOnz9Bad+YMGbXZhS3taXiNYMgdMTxaunbu
+        LJERA7VDwR+BjY24zvFmNvlywkTjqOfgFYLx5Y4aMVLN2nBlXw7xq5nrCleuXJH/de+hTahVX39tHPUM
+        PE7w30rrnBgTI/3D+2nnwXebvjPO+Dcw9ViLixUuIhvWeU6z9jjBRG56f/qZDBs8RL5eudI4+mhgfkKi
+        FtVo13jiPAGPEsyXwuXIzE2YN0+bFo8S8IETl878egYdkjxx/IRxxjp4jGD8xsxcYrMx48Zrx/+jiNkz
+        Z0nunG/fc3OGhsrvv/1mnLEGHiN4cuwknVlBbPXa1WvG0UcPxJArEgVTNj/RqtiJXxpnrIFHCCaw3rFd
+        e51pcfTIUePoo4uI/v2lulK44qfG6dShA/v3G2fMh+UE46nCzm3csJGs+Wa1cfTRxpbNm7XJtGL5CunW
+        pYv0VJINn7YVsJxgIkOkuXw+cpRfZi2mBjdv3NAZJYQX8QEQNdu1c5dx1lxYSjBPJZ4qUmHOn/e9kJ83
+        MXzYMKkUEqLs43PSJSxM+vbqbYlVYSnBrL1EVgggBOCI7zZtksJKTG/ZvEU2bdio04/I+DQblhIcPSxK
+        u+isWl/SMy6cvyDly5TVqT+4bokfE3gxG5YRfOHCBR0lIvc4gOQgrEjCIIkN/E4+dw21lJHQZyYsI5iU
+        0y/GjDFeBeAKOHxwW5KWS4YnlRfkcZsJSwjGJddB2b27d1mjGf4XEIMlkT214zcLPU0k6xXK/16SXxpF
+        C4WLGW0WLCGY5DOS0Ky8OQ+DxMREKVGihBQuXDhVo0CBAhIaGmqZWxWliujSvLlz9WsqLz6oECK//vKr
+        fm0GTCcYhYEKAuK83gSKXd26deWxxx5L0yhWrJhlmRhICMQy7ltw6eJFnY25aMFC/doMmE4w4gb1n0oD
+        bwKC69Wr55K0/zKaNGmivXFWgL9LFmaHtu20WMYOJtqG5WGWTWw6wWT5ly0drEtCvI3NmzdLXFycTJs2
+        LVVjzpw5cuKEtSE9Eh9qVKuWJCWINpEYQBaIGTCVYEKC7dp8rOts01vaq7cwdfIUXaZKNSMgFxzN2iwF
+        1VSCKcvsqGy76KjhPu3cQDQStiMhbseOHfonZopVojgl4OVDk6b0BWAHkxtOjZMZMJXgmHHjZOCACB37
+        9UWg1MycOVOvzbly5ZJXXnlFXnrpJf0zZ86cUqdOHYmPjzfd2ZAS9u3dK0UKFtIFboCJ0bZNG30fzYBp
+        BJMG20fZcVT+LZg/3zjqGigUXE/loKewbds2CQkJkaeeesqlMmUbTz75pJQpU0Y2KmnkCSBJgkuWlNiJ
+        91NqB0dGakvEDIliGsFHjx6Vvr17y4zp0+Wbr1cZR5MDcocoE6pUqVISHBwsAwcOtNxehqwcOXK4JNTd
+        yJIli6xa5f57mAWUKzI7Ivr1N46ITIuL127LG9evG0dSD9MIJkMSxznZ/ERK3AGnQcWKFZNu5HPPPSeb
+        Urg+rTh9+rQULVrUgTwGMzVbtmxSpEgRTf7TTz+d7Jp8+fLpXh5WgllKRwLKUG3xcu4lRedmtIgwjeAJ
+        42N0WwXqjFIqm4TgysqYt93EZ555RlasWGGcfTBQhpYsWSKDBg3SXqbOnTtLQkKC28YoQ4cOdSCNwbob
+        FRWlWyih7fMQxMTEyGuvvZbs2l69ehl/yT14/4IFC6Rfv37Srl07aaPW0J49e8p0Jc34HykBe5esDjJe
+        bLXPJEmUDy4jJ0x4uEwhGMUA8bxn9x6dRJZSGYozwayJnTp1kilTpkhsbKz8YGiTzqAdw8iRIyVPnjz6
+        obAn4dlnn9VuSWegLOFytL/28ccf1w+HK4xTSqLzGp07d279ULkCD9X48eP1Z3IlAZ544gn9fh7AlBwX
+        kREROkfLZgtjKjGD6S6QVphC8BV1I2lcQoiQ+hvaFbmDM8HOo0GDBi5NLGYYYtXVexiQ74ytW7fKiy++
+        6HBd1qxZ3YpdRCKE2F/Pw7N6tetcskmTJiV72FwNJMN337mv4Phi7FipUKas7i0C9iqzjTSegwcO6Ndp
+        gSkEkxXYs3t3vZ5guJNU5g4PIrhq1ar6Gnvw9Ldo0cLhOsQsgQSOI0YPuLgZc+fO1bPI/n0VKlRwK855
+        sGrXru1wPePLL12ntrZu3drhurfeekuLaJYOHiT7c2FhYca7kgPFtNT7JZKcHWTC+BTBK9UaagsuQPDa
+        b9fq313BmWAIwKFfs2ZNbZ+6Wo9RPpoqRcT+hkUosYbYTkn0TVSmh/17GPXr108x+Y/10/k9w4YNM87e
+        B/+3ZcuWDtcNHz7cOCtadLMc2M7xnZ0fXBsWL1okRQsXSUop3r5tu16DzagpNoXgWPWET4+P17/PmTVb
+        E+4OzgQj4hapL8gNcxcHdUXwhAkTjLPuwcyzfw+Dhyglgp1nJcOeOBtcETxWiVobFiuF035dxgZ3JznQ
+        mmlbsX/fvfzoFcuWS0i5cjoRIK0wheCI/gN08BrwNC5euEj/7gquCF5qeHHcwRXBzJAHYf78+cnWbZwY
+        7toc8dmqV6/ucD1j8uTJxhX34YrgMXYZLDy0D0vwurVrNcE25ZTqS7r4IKHSijQT/OfdP6V7165JznF8
+        qzNnzNC/u4Irgpc9IE0ltQTvVDfs5ZdfdnhfxowZ3WqnmDTZs2d3uB47fd26dcYV92EmwToRvmChJOWU
+        cGGXsM76f6QVaSaYJG6MdFtYjURubGJ3gOAqVaokfXHMklmzZhlnXSO1BGPj4jGzfx8DG9V5OeBm4lWz
+        XzcZ+fPnd5nTbSbB25S2X0jNYBqjYgtTgYhf3wykmeDLly7p7MBzZ++tFzQHpRFoSutpw4YNHW5M3rx5
+        pVu3btKxY0eX4jq1BAOuc9akmZU9evSQPcrepP0g0aTw8HB54YUXHK5jQLormEnw7l27dc/NjRs26Mao
+        tDmmB5cZSDPBKAJ0x7FFYMj3pbjK3ToHRo8e7XBj7AcZFM6iidfNmjVzuO5hCeZz2btG7QdRJETyq6++
+        6vJ8UFBQkuniCq1atXK43p7g/6Jk/bjnR12rtNbohgvBD/KAPSzSTDDOAUT0VSMD4ZZSDFC6UipV4aGo
+        VatWMgWI164cFgBTxV58PizBgJlaqFAhh//1oEE48UE+8hEjRjh8JnuCdymdJEOGDEnnUrK/Dx06JEGF
+        CsuK5cu1uUnColktG9NO8Jmz8okdwYhT6m5onJ0SiM2y9uIAaNy4sbY/cVe6S3AjhWXq1KkyYMAAfWP/
+        qxuP6xs1aiTPP/980k13NfBc1ahRQxP0IPAdSAniM0VHR8t+uzJQlig8YLhFIyMjtSLJvXEFnV1ZJEib
+        mGjPtCg2C6bMYES0fQ7RpC9j1Xry8PFUd1/cbBB/JgSI7xsvGJ6nTJky6agSzpb27dtrHcDT6b4QXFwt
+        B8TTSdf5YYdrf3xqkGaCqY4jAwE/tA3kRdNwxJeBpCAKhPaPouXNHDIIRskqqsQ0e0e4k2KpQZoJvnrl
+        qk60s1cKSJ01U8z4OyC4cIECuu0h3XXNRJoJRnFAybLPAqT1/aCBkW6VigAcAcEk3mELE0kyE2kmGBOm
+        92efOfifIXaQsh99scW9LwKCC+TNpyUhjiAzkWaCAWLFuQ8jyXcppe4EcB+kzObLnUdmTJtuHDEPphCM
+        /UafZHsHxepV3+jQYQAPBns25cqeQ9atTe7zTitMIZit4ij2Zt8hG37++WediuLNPRbSA3D6sPNanlzv
+        JCW/mwlTCMZuZP2wV7Tu3rkrkQMifKJGyZcxZfJkyZY5iw4XMlHMhikEg6GDBycTyaSifLVosfEqAGec
+        PXNGF5rlfzevlC1VWlkfrpP70gLTCCbgj7lkL5LpzzF00GCfrlPyJvAVsMkXyxt9s6zwoJlGMJWFOMl3
+        795tHLlnLg3o11+OHQ20L3QG29tSZotbl70WbTXCZsM0gsGoESNkiJqx9liQOF8nwwdwH0i0T3v21G5J
+        bGCak9IJ0AqYSjDbvJGNQNDfhtOnTuk2wmwTF8A94BQqHlRU1q9bp/dcwoNF4p0VMJVg7GA8WJQ+2tvE
+        OEKWLzW3PVB6BQ88zcBtxWYopvTyZE9jK2AqwQCRg8Jgn/zOnoOEwszIEkzPuKN0Enpms7klYVZENesv
+        2+Ca7aK0wXSCAfVJNBexOT7uJQFEeXzHEV8CEg13bolixWWzUcbCkkbC+5RJydNyzYIlBNMIjaeSTZZt
+        oppK9h7duj2y3d6XLlmie2LRBNwGlq7iRYL0LuRWwRKCAV4tdtW2X3vZIjZuyqPnn2brIPZowCdgq9q/
+        cP687vZOF3wrzCMbLCMYJM5L0CTbNr4itZb0HjTHRwW6UlCZQd06d3FwZEydPFkK5MsvW7dsMY5YA0sJ
+        5skcPepz3Y6A3GPALqOUml65bE4fKF8G2+bU+vBD3W8DR5AN5D5T/0uzdKs7+1hKMEBzxHSiD4VtP2DC
+        Y7Tvs0pz9AWcU1oyPaAb1K2nCbUBnWTIoEE6B4uCeathOcGAXGlSeKpU/EAXWmEukQUSN2WqcYV/gRRi
+        XI/Yu84KFNULBZVoZmNOe1+BVfAIwYAgxLixY3XUJD4uTo4fOy6hHTroDEx/AqYhS9AH5Ssk28GcVhDs
+        X4GfwD4L1Up4jGCAPUyjcIqbqaDDPUckxV/2dIBcOh3QjsG5EQ07nKFokVzHHg2egkcJtoFiK7rKsC6z
+        1Z3eU8lNH4z0AvprEC6lPbAzuX/cvq31ELa0mxwbaxz1DLxCMKAoLGrIUCldoqRugs1PnAHpETR1Ye+F
+        OjVraYeOPX67eVOnLr39Vnbto/d0CpPXCAaIbCrqateoKW++kVkrHwlz09eupPTToB1wq+bNdR6aPaic
+        YD3OmS279sWbWbHwsPAqwTaweTJm03t588m7ud7RvllfN6GwX2fNnCllS5eW/uHhDrVZPKBoy9j/7+TI
+        qf3w3gq0+ATBgNmME54gBTnC3bt01e2EfDHdh0hQn169tEUwY9o03cbCBvKsoqOi9MNKxeDc2XMsd2ak
+        BJ8h2AbceWSBVK1USW8NgOa5Yf16j1f8ucK///yrc5frqCUFJ4Z9mis6xexZs7Stzy7fLZXI9gWXrM8R
+        bAP1Tb3+96lkz/qm5Hk7lzSsV0+HISmWJiXX02A9HRw5SCoq+3b0qFFJ1Yj0spqkNGPWYYjFBUmFgq90
+        vPdZggFJe2welVeJbBzztL5/P6io1lhpOo4jwYyWuylBF6qrtZYgPcsHm43gV0cZ7KwUKMQwxEI84T9f
+        q8fyaYKBzTlCs87wPn10FmLb1m10mgvJ4rgDmelsZoH9yQ1GW03Nusf/QrljOcDrlJiQIPVq19EEkjeF
+        WCY69t67ebXZQz0vn2V+YqLP7q7q8wTbwHrXolkzCQv9RCtjRw4fkaVfLdF78OL+42ZjZjHLcaAQwSHB
+        gH4haLH0sqa904SYGN1ojOI4gh4kJeD85+HBpEE68PeI37I8YL7hoKCPFfY6iQzDlP1OC37sX1/X9tMN
+        wQBv0agRIxWBVbWWjavz9KnTWsE5dvSY7pGJp6hf377S7uOPdSQHsgms07mGQcoMZDELITBzhozyxusZ
+        JNNrr0vWTG/oKE/TjxpLn8966YeCmDabjZDHjCnkTY04NUhXBNtw+PBhnUfcqH4DbWsiJrGj58yerR0n
+        JPxRukpLItoq0nmP9ZGIFu5EUnsJwkNmSUU4YhhCEck0BPWnwvV0SbANaKr4telOExkxUDdkQzQjRpNG
+        ixb6AejYrr0OcPAgoKAtW7JUt5r45eQvPmGCWYV0TbAzyCDB10sTNqI3eI/orMM6icMkPblAzYJfERxA
+        cgQI9nMECPZzBAj2cwQI9nMECPZzBAj2cwQI9nMECPZzBAj2cwQI9nMECPZzBAj2cwQI9nMECPZzBAj2
+        a4j8H1Wduz9GkTMRAAAAAElFTkSuQmCC
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>45</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAAAAAAAEAIAC6SAAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAASIFJ
