--- a/Quan_Ly/Quan_Ly/Properties/Resources.resx
+++ b/Quan_Ly/Quan_Ly/Properties/Resources.resx
@@ -133,4 +133,7 @@
   <data name="eye-off" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\img\icon\eye-off.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="refresh-circle1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\img\icon\refresh-circle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
